# FastQDesign

./: .gitignore  404.html  AGENTS.html  AGENTS.md  CMakeLists.txt  DESCRIPTION  LICENSE-text.html  LICENSE.html  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  configure  environment.yml  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: pkgdown.yaml
R/: cluster.R  degene.R  design.R  downsample.R  fastF.R  pseudotime.R  utils.R
articles/: data-sources.html  data-sources.md  experiment-design.html  experiment-design.md  fastF-tool.html  fastF-tool.md  generate-power-metadata.html  generate-power-metadata.md  index.html  index.md  sample-prep.html  sample-prep.md  tests.html  tests.md
data/: AIBM_power.csv  SF_NIAID_New_Pricelist_2021.xlsx  df_power_paper.rda
man/: ConditionalShannonEntropy.Rd  DownSample.Rd  DownSamplePrep.Rd  Entropy.Rd  ExtractMTX.Rd  FastQDesign-package.Rd  FastQDesign.Rd  FindAllMarkersByCondition.Rd  FindPseudotime.Rd  FixedNumClusters.Rd  JaccardIndex.Rd  MarkerGeneFilter.Rd  OptimalNumClusters.Rd  PPV.Rd  RootNodeSelect.Rd  SampleMatch.Rd  SamplePrep.Rd  fastF_bam2db.Rd  fastF_crb.Rd  fastF_extract.Rd  fastF_filter.Rd  fastF_freq.Rd  reexports.Rd
news/: index.html  index.md
reference/: ConditionalShannonEntropy.html  ConditionalShannonEntropy.md  DownSample.html  DownSample.md  Entropy.html  Entropy.md  ExtractMTX.html  ExtractMTX.md  FastQDesign-package.html  FastQDesign-package.md  FastQDesign.html  FastQDesign.md  FindAllMarkersByCondition.html  FindAllMarkersByCondition.md  FindPseudotime.html  FindPseudotime.md  FixedNumClusters.html  FixedNumClusters.md  JaccardIndex.html  JaccardIndex.md  MarkerGeneFilter.html  MarkerGeneFilter.md  OptimalNumClusters.html  OptimalNumClusters.md  PPV.html  PPV.md  RootNodeSelect.html  RootNodeSelect.md  SampleMatch.html  SampleMatch.md  SamplePrep.html  SamplePrep.md  fastF_bam2db.html  fastF_bam2db.md  fastF_crb.html  fastF_crb.md  fastF_extract.html  fastF_extract.md  fastF_filter.html  fastF_filter.md  (+4 more)
src/: Makevars  README.md  bam2db.c  bam2db.h  fastF  filter.c  filter.h  hashtable.c  main.c  utils.c  utils.h
tests/: testthat.R
tests/c/: test_bam2db.c  test_filter.c  test_integration.c  test_utils.c
tests/testthat/: test-design.R  test-downsample.R  test-fastF.R  test-pseudotime.R
vignettes/: data-sources.Rmd  experiment-design.Rmd  fastF-tool.Rmd  generate-power-metadata.Rmd  sample-prep.Rmd  tests.Rmd
